# TemplateMatchingModifier

./: LICENSE  pyproject.toml
.github/workflows/: python-tests.yml
data/: I41amd.lmp  P21m.lmp  Pbc21.lmp  Pbca.lmp  Pc.lmp  Pmna.lmp  cubic.lmp  mono.lmp  tetra.lmp
src/TemplateMatchingModifier/: __init__.py  identification.py
